<resources>
    <string name="app_name">Students App</string>
    <string name="student_picture_desc">Student profile picture</string>
    <string name="student_name_label">Student Name</string>
    <string name="student_id_label">Student ID</string>
    <string name="add_student_description">Add a new student</string>
    <string name="student_name_hint">Enter student name</string>
    <string name="student_id_hint">Enter student ID</string>
    <string name="save_button">Save</string>
    <string name="no_students_message">No students entered. Please input a student.</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="student_phone_hint">Enter phone number</string>
    <string name="student_address_hint">Enter address</string>
    <string name="student_checked_label">Checked</string>
    <string name="delete_button">Delete</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_time">Birth Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>